@@ -14,7 +14,7 @@ Current:
     - ...
 
   * Bugfixes
-    - ...
+    - bug #22248: Read efuse error (partial fix)
 
   * Internals:
     - ...
